--- a/Mecanique.tex
+++ b/Mecanique.tex
@@ -2,35 +2,28 @@ Plusieurs pièces mécaniques ont dû être développées pendant ce projet comm
 Maintenant que les éléments sont en place, il faut les lier ensemble avec des pièces faites sur mesure. Toutes les pièces sont faites
 d'aluminium EN-AW 6082 sauf si mentionné autrement. Les dimensions indiquées sur les figures sont en mm sauf si mentionné autrement.
 
+\section{Assemblage mécanique complet}\label{sec:AssMecComp}
+L'assemblage de toutes les pièces mécaniques fabriquées avec la structure et les composants commandés vu de face et de derrière est
+donné ci-dessous. Cette image permet de donner une idée de où sont placés les pièces qui seront discutées plus loin dans ce chapitre. Une vue
+éclatée d'une partie du système est aussi disponible dans l'annexe B.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletFace.svg}
+    \caption{Représentation de l'assemblage mécanique complet vu de face}
+    \label{fig:AssCompFace}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletDerriere.svg}
+    \caption{Représentation de l'assemblage mécanique complet vu de derrière}
+    \label{fig:AssCompDerriere}
+\end{figure}
+
 \section{Liaison Moteur-Glider}\label{sec:LiaisonMotGlid}
-La liaison entre le chariot du guidage et le \gls{glider} du moteur va se faire en deux pièces vissées ensemble. La pièce
-connectée au chariot devra accueillir deux roulements qui servent à faire tourner la partie qui tient la tige du pendule. Une tolérance h6 est
-présente sur le diamètre intérieur pour les roulements en suivant les spécifications des normes \cite{Ajustements}. Une zone pour placer un anneau de LEDs est aussi nécessaire afin de pouvoir illuminer
-la tige. Enfin, cette pièce devra aussi accueillir l'encodeur pour la position angulaire. La fixation sur le chariot se fait avec quatre vis M5
-ce qui nécessitera donc des lamages. La fixation sur l'autre pièce se fait sur le dessous de la pièce avec quatre taraudages M5. Deux perçages
-sont présents avec une tolérance H7 pour des goupilles qui permettent l'indexage avec l'autre pièce . On obtient la pièce suivante.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.6\textwidth]{assets/figures/LiaisonChariot.svg}
-    \caption{Représentation de la pièce de liaison du chariot}
-    \label{fig:LiaisonChariot}
-\end{figure}
-
-La seconde pièce devra évidemment se lier avec la première, mais aussi avec le moteur. La première pièce ayant les taraudages, celle-ci aura
-quatre lamages M5 ainsi que deux trous avec la tolérance K7 pour les goupilles d'indexage. Pour la fixation au moteur, quatre lamages M3 suffiront. Deux autres
-éléments viennent encore se fixer sur cette pièce: le support de la tête de lecture pour la règle linéaire et la chaîne porte-câbles. Pour le
-support de tête de lecture, trois taraudages M4 sont placés sur un côté, alors que deux trous taraudés sont utilisés pour fixer la chaîne
-porte-câbles. La pièce finale est représentée ci-dessous.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonMoteur.svg}
-    \caption{Représentation de la pièce de liaison du moteur}
-    \label{fig:LiaisonMoteur}
-\end{figure}
-
-L'assemblage de ces pièces entre elles et avec leur liaisons directes donne la mise en plan suivante.
+La liaison entre le chariot du guidage et le \gls{glider} du moteur va se faire en deux pièces vissées ensemble. L'assemblage de ces pièces
+entre elles et avec leur liaisons directes donne la mise en plan suivante.
 
 \begin{figure}[H]
     \centering
@@ -39,19 +32,41 @@ L'assemblage de ces pièces entre elles et avec leur liaisons directes donne la 
     \label{fig:AssGuiEntr}
 \end{figure}
 
-\section{Support tête de lecture}\label{sec:SupTeteLect}
-Le support de la tête de lecture de la règle linéaire est fixé sur la pièce attachée au moteur comme mentionné plus haut. Elle aura donc trois
-lamages M4 pour se fixer à la liaison moteur et aussi deux trous de passage pour vis M3 pour la tête de lecture. Un trou supplémentaire est ajouté
-pour faire le réglage en position de la tête. La pièce obtenue est la suivante.
+La première pièce, la liaison au chariot, est illustrée sur l'image suivante.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.svg}
-    \caption{Représentation du support de tête de lecture}
-    \label{fig:SupTeteLect}
+    \includegraphics[width = 0.6\textwidth]{assets/figures/LiaisonChariot.svg}
+    \caption{Représentation de la pièce de liaison du chariot}
+    \label{fig:LiaisonChariot}
 \end{figure}
 
-Ci-dessous, une représentation avec le support monté sur la liaison au moteur et avec la tête de lecture.
+La liaison au chariot devra accueillir deux roulements qui servent à faire tourner la partie qui tient la tige du pendule. Une tolérance
+h6 est présente sur le diamètre intérieur pour les roulements en suivant les spécifications des normes \cite{Ajustements}. Une zone pour placer
+un anneau de LEDs est aussi nécessaire afin de pouvoir illuminer la tige. Enfin, cette pièce devra aussi accueillir l'encodeur pour la position
+angulaire. Une fente sur l'arrière est prévue pour le passage de câble des LEDs et de l'encodeur. La fixation sur le chariot se fait avec quatre
+vis M5 ce qui nécessitera donc des lamages sur la face avant. La fixation sur l'autre pièce se fait sur le dessous avec quatre taraudages M5.
+Deux perçages sont présents avec une tolérance H7 pour des goupilles qui permettent l'indexage avec la liaison moteur.\\
+
+La seconde pièce, la liaison moteur, devra évidemment se lier avec la première, mais aussi avec le moteur. Elle est représentée sur l'illustration
+suivante.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonMoteur.svg}
+    \caption{Représentation de la pièce de liaison du moteur}
+    \label{fig:LiaisonMoteur}
+\end{figure}
+
+La première pièce ayant les taraudages, celle-ci aura quatre passage de vis M5 ainsi que deux trous avec la tolérance K7 pour les goupilles d'indexage
+sur le dessus.
+Pour la fixation au moteur, quatre lamages M3 placés sur le dessus suffiront. Deux autres éléments viennent encore se fixer sur cette pièce: le support de la tête de
+lecture pour la règle linéaire et la chaîne porte-câbles. Pour le support de tête de lecture, trois taraudages M4 sont placés sur la face avant, alors
+que deux trous taraudés M6 sur le dessus sont utilisés pour fixer la chaîne porte-câbles.
+
+\section{Support tête de lecture}\label{sec:SupTeteLect}
+Le support de la tête de lecture de la règle linéaire est fixé sur la liaison au moteur comme mentionné plus haut. Ci-dessous, une représentation
+avec le support monté sur la liaison au moteur et avec la tête de lecture.
 
 \begin{figure}[H]
     \centering
@@ -60,19 +75,19 @@ Ci-dessous, une représentation avec le support monté sur la liaison au moteur 
     \label{fig:AssMesLin}
 \end{figure}
 
-\section{Support amortisseur}\label{sec:SupAmort}
-Les amortisseurs se trouvent à l'avant du système au bout de chaque côté de la course. Leur support doit être assez épais pour pouvoir supporter
-les chocs. Un trou taraudé M10 est nécessaire pour fixer l'amortisseur et deux lamages M4 permettent la fixation sur le profilé. Les deux amortisseurs
-étant dans des directions opposées, il faut créer deux supports symétriques pour pouvoir les fixer. Voici l'image d'un des supports.
+Trois lamages M4 pour se fixer à la liaison moteur ainsi que deux trous de passage pour vis M3 pour la tête de lecture sont présents sur la face
+avant. Un trou supplémentaire est ajouté sur cette face pour faire le réglage en position de la tête. La pièce obtenue est la suivante.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.2\textwidth]{assets/figures/SupportAmortisseur.svg}
-    \caption{Représentation du support de l'amortisseur}
-    \label{fig:SupAmort}
+    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.svg}
+    \caption{Représentation du support de tête de lecture}
+    \label{fig:SupTeteLect}
 \end{figure}
 
-Le placement des supports de l'amortisseur sur un des côtés est visible sur cette image.
+\section{Support amortisseur}\label{sec:SupAmort}
+Les amortisseurs se trouvent à l'avant du système au bout de chaque côté de la course. Le placement des supports de l'amortisseur sur un des
+côtés est visible sur cette image.
 
 \begin{figure}[H]
     \centering
@@ -81,13 +96,31 @@ Le placement des supports de l'amortisseur sur un des côtés est visible sur ce
     \label{fig:PlaceSup}
 \end{figure}
 
+Leur support doit être assez épais pour pouvoir supporter les chocs. Un trou de passage M10 est nécessaire pour fixer l'amortisseur et deux
+lamages M4 permettent la fixation sur le profilé. Les deux amortisseurs étant dans des directions opposées, il faut créer deux supports
+symétriques pour pouvoir les fixer. La représentation d'un des supports se trouve ci-dessous.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.2\textwidth]{assets/figures/SupportAmortisseur.svg}
+    \caption{Représentation du support de l'amortisseur}
+    \label{fig:SupAmort}
+\end{figure}
+
 \section{Partie tournante}\label{sec:PartieTour}
-La partie tournante du système est composée de plusieurs pièces, dont une en \acrshort{PC}. Tout d'abord, la partie en contact direct
-avec les roulements et en couplage avec l'encodeur. Cette partie est faites en 2 morceaux qui sont chassés ensemble et est aussi attachée
-à une autre pièce, le couplage à la tige, à l'aide de quatre taraudages M2. Ces deux pièces sont imbriquées l'une dans l'autre et il faut donc
-une tolérance sur le diamètre extérieur de la pièce de h6. Il faut aussi mettre une tolérance sur le diamètre intérieur qui définit la face où
-s'appuye les roulements donc une tolérance de M7 a été choisie car la bague extérieure du roulement est fixe par rapport aux efforts et ceux-ci
-sont faibles \cite{Ajustements}. Voici à quoi ressemble la première partie de la pièce.
+La partie tournante du système est composée de plusieurs pièces, dont deux en \acrshort{PC}. L'assemblage de ces différentes pièces ainsi que de
+la liaison au chariot et l'encodeur donne la représentation suivante.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.svg}
+    \caption{Représentation de l'assemblage des parties tournantes et leurs connections directes}
+    \label{fig:AssPartieTour}
+\end{figure}
+
+Tout d'abord, la partie en contact direct avec les roulements et qui fait tourner l'encodeur angulaire, le couplage encodeur. Cette partie est
+faites en 2 morceaux qui sont chassés ensemble et est aussi attachée à une autre pièce, le couplage à la tige, à l'aide de quatre taraudages M2.
+La première partie de la pièce, couplage encodeur 1, est illustrée ci-après.
 
 \begin{figure}[H]
     \centering
@@ -96,7 +129,7 @@ sont faibles \cite{Ajustements}. Voici à quoi ressemble la première partie de 
     \label{fig:CouplEnco}
 \end{figure}
 
-Et voici la seconde partie qui vient se chasser dans le trou central de la première. C'est un arbre rectifié de 3~mm de diamètre et 32~mm
+La seconde partie, couplage encodeur 2, qui vient se chasser dans le trou central de la première est la suivante. C'est un arbre rectifié de 3~mm de diamètre et 32~mm
 de long en acier CK45.
 \begin{figure}[H]
     \centering
@@ -105,10 +138,12 @@ de long en acier CK45.
     \label{fig:CouplEnco2}
 \end{figure}
 
-La pièce de couplage à la tige qui est attachée à celle montrée sur la figure \ref{fig:CouplEnco} est en \acrshort{PC}. Elle possède donc quatre
-lamages M2 pour pouvoir se visser sur la pièce précédente et aussi un perçage de 10~mm de diamètre ajusté avec la tige qui sera chassée dedans.
-Une tolérance H7 est présente sur le diamètre intérieur de la pièce pour avoir un jeu incertain avec la pièce de couplage à l'encodeur.
-La pièce ressemble à ceci.
+Le couplage encodeur et le couplage à la tige sont imbriquées l'un dans l'autre et il faut donc une tolérance sur le diamètre extérieur du couplage encodeur de h6. Il faut aussi mettre une tolérance
+sur le diamètre intérieur qui définit la face où s'appuye les roulements donc une tolérance de M7 a été choisie car la bague extérieure du
+roulement est fixe par rapport aux efforts et ceux-ci sont faibles \cite{Ajustements}.
+
+La pièce de couplage à la tige qui est attachée à celle montrée sur la figure \ref{fig:CouplEnco} est en \acrshort{PC}. La pièce est illustré à
+l'image suivante.
 
 \begin{figure}[H]
     \centering
@@ -117,18 +152,13 @@ La pièce ressemble à ceci.
     \label{fig:CouplTige}
 \end{figure}
 
+Elle possède donc quatre lamages M2 pour pouvoir se visser sur le couplage encodeur et aussi un perçage de 10~mm de diamètre ajusté avec la tige
+qui sera chassée dedans. Une tolérance H7 est présente sur le diamètre intérieur de la pièce pour avoir un jeu incertain avec la pièce de
+couplage à l'encodeur.
+
 La tige, elle aussi en \acrshort{PC}, vient se placer dans le perçage de 10~mm de la pièce précédente. La tige a donc un
 diamètre lui aussi égal à 10~mm et une longueur de 420~mm. Aucune autre modification n'est apportée à la tige à part un chanfrein afin d'éviter
 les arêtes coupantes.\\
-
-L'assemblage de ces différentes pièces ainsi que de la liaison au chariot et l'encodeur donne la représentation suivante.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.svg}
-    \caption{Représentation de l'assemblage des parties tournantes et leurs connections directes}
-    \label{fig:AssPartieTour}
-\end{figure}
 
 Les forces qui s'appliquent aux roulements peuvent maintenant être calculées à l'aide du schéma de forces sur la figure \ref{fig:CalcRoul}.
 Les termes utilisés dans ce schéma sont les suivant:
@@ -195,18 +225,18 @@ un problème.
 
 \section{Support pour chaîne porte-câbles}\label{sec:SupChainCable}
 La chaîne porte-câbles est fixée d'un côté à la liaison moteur comme précisé plus haut au chapitre \ref{sec:LiaisonMotGlid}. L'autre côté est
-attaché au support pour chaîne porte-câbles qui est lui-même fixé sur un profilé. Deux passages de vis M4 sont présents pour la fixation sur
-le profilé ainsi que deux autres passages de vis M6 pour la fixation de la chaîne. Il y a aussi un dégagement de matière afin de pouvoir faire
-passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier électrique. Cette pièce est fabriquée en tôle pliée de
-2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052. Cette pièce fait 40~mm par 40~mm par 50~mm.
-L'image ci-dessous représente le support pour la chaîne.
+attaché au support pour chaîne porte-câbles qui est lui-même fixé sur un profilé. L'image ci-dessous représente le support pour la chaîne.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportChaineCable.svg}
+    \includegraphics[width = 0.5\textwidth]{assets/figures/SupportChaineCable.svg}
     \caption{Représentation du support pour la chaîne porte-câbles}
     \label{fig:SupChaineCable}
 \end{figure}
+
+Deux passages de vis M4 sont présents pour la fixation sur le profilé ainsi que deux autres passages de vis M6 pour la fixation de la chaîne.
+Un dégagement de matière est présent afin de pouvoir faire passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier
+électrique. Cette pièce est fabriquée en tôle pliée de 2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052.
 
 \section{Plaque de passage pour moteur}\label{sec:PlaPassMot}
 Afin de cacher l'arrière du système pour le rendre davantage présentable, mais aussi afin d'augmenter la rigidité du système, une plaque est placée
@@ -218,22 +248,4 @@ passent par cet endroit donc il faut découper une zone de passage pour ces piè
     \includegraphics[width = \textwidth]{assets/figures/PlaquePassageMoteur.svg}
     \caption{Représentation de la plaque centrale}
     \label{fig:PLaPassMot}
-\end{figure}
-
-\section{Assemblage mécanique complet}\label{sec:AssMecComp}
-Enfin, l'assemblage de toutes les pièces mécaniques fabriquées avec la structure et les composants commandés vu de face et de derrière est
-donné ci-dessous.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletFace.svg}
-    \caption{Représentation de l'assemblage mécanique complet vu de face}
-    \label{fig:AssCompFace}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletDerriere.svg}
-    \caption{Représentation de l'assemblage mécanique complet vu de derrière}
-    \label{fig:AssCompDerriere}
 \end{figure}
