--- a/Mecanique.tex
+++ b/Mecanique.tex
@@ -236,7 +236,10 @@ attaché au support pour chaîne porte-câbles qui est lui-même fixé sur un pr
 
 Deux passages de vis M4 sont présents pour la fixation sur le profilé ainsi que deux autres passages de vis M6 pour la fixation de la chaîne.
 Un dégagement de matière est présent afin de pouvoir faire passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier
-électrique. Cette pièce est fabriquée en tôle pliée de 2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052.
+électrique. Cette pièce est fabriquée en tôle pliée de 2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052.\\
+
+Un problème de soutient de la chaîne porte-câbles est survenu lors de l'assemblage. La description du problème et de la solution à appliquer
+pendant le mois d'août est donnée dans le chapitre \ref{sec:ProbChaine}
 
 \section{Plaque de passage pour moteur}\label{sec:PlaPassMot}
 Afin de cacher l'arrière du système pour le rendre davantage présentable, mais aussi afin d'augmenter la rigidité du système, une plaque est placée
