--- a/Remerciement.tex
+++ b/Remerciement.tex
@@ -7,3 +7,5 @@ Merci à Mr. Mikaël Krummen pour son aide sur la création et la mise en plan d
 Merci à Mr. Pierre-François Gauthey pour son aide et ses suggestions pour les pieds réglables et supports du système.
 \newline
 Merci à Mr. Marc-André Bovet pour son aide avec les commandes de matériel et les discussions avec les fournisseurs.
+\newline
+Et merci à toutes les personnes de ma classe et les personnes présentes en C26 pour leur aide et leur support tout le long du projet.
