--- a/Solutions.tex
+++ b/Solutions.tex
@@ -152,7 +152,8 @@ Cette solution utilisera la règle linéaire de chez Heidenhain \cite{Heidenhain
 \section{Solutions choisies}\label{sec:SolChoix}
 
 La solution choisie pour le moteur linéaire est la solution A, c'est-à-dire la commande d'un nouveau moteur chez TDS Precision \cite{TDSPrecisionProducts}. Ce dernier
-sera fixé à l'arrière de la structure sur un des profilés du centre.\\
+sera fixé à l'arrière de la structure sur un des profilés du centre. Un problème lors de la fixation de cette pièce est apparu, voir le chapitre
+\ref{sec:FixRailMag} pour la description du problème et sa résolution.\\
 
 La solution choisie pour le guidage linéaire est la solution C, c'est à dire la commande d'un guidage linéaire chez Igus \cite{Igus} et l'utilisation d'une
 règle linéaire de chez Heidenhain \cite{Heidenhain} appartenant déjà à la \acrshort{Heig}. Le rail peut être fixé sur la partie avant des profilés et la règle linéaire peut
