--- a/bibliography.bib
+++ b/bibliography.bib
@@ -278,6 +278,30 @@
   keywords = {Waveshare}
 }
 
+@online{ButtonAdd,
+  author   = {John},
+  title    = {How to Add a Power Button to Your RaspberryPi},
+  url      = {https://howchoo.com/g/mwnlytk3zmm/how-to-add-a-power-button-to-your-raspberry-pi},
+  addendum = {(accessed: 25.07.2023)},
+  keywords = {Button, RaspberryPi}
+}
+
+@online{LEDAdd,
+  author   = {Zach},
+  title    = {Build a simple RaspberryPi LED Power/Status Indicator},
+  url      = {https://howchoo.com/g/ytzjyzy4m2e/build-a-simple-raspberry-pi-led-power-status-indicator},
+  addendum = {(accessed: 25.07.2023)},
+  keywords = {LED, RaspberryPi}
+}
+
+@online{ScriptStartup,
+  author   = {Sam Westby Tech},
+  title    = {How to Run a Script on Startup for Raspberry Pi // EASY},
+  url      = {https://www.youtube.com/watch?v=Gl9HS7-H0mI},
+  addendum = {(accessed: 25.07.2023)},
+  keywords = {Youtube, RaspberryPi}
+}
+
 % @article{einstein,
 %     author = "Albert Einstein",
 %     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
