--- a/report.tex
+++ b/report.tex
@@ -77,6 +77,9 @@
 \chapter{Boîtier électrique}
 \input{BoitierElectrique.tex}
 
+\chapter{Programmation}
+\input{Programmation.tex}
+
 \chapter{Imprévus}
 \input{Imprevus.tex}
 
