Pret à la relecture

--- a/Annexes.tex
+++ b/Annexes.tex
@@ -7,43 +7,30 @@
 
 \subsubsection*{Annexe C: Fiches techniques}
 
-%Anneau de LEDs
-\textbf{Anneau de LEDs Adafruit NeoPixel Ring, Berrybase}
-
-% Boitier et composants d'alimentation
-\textbf{Boitier MNX ABS 200/100 HG, FIBOX}
-\newline \textbf{Arrêt d'urgence X6 Series, IDEC}
-\newline \textbf{Bouton d'alimentation C14 250V, Schurter}
-\newline \textbf{Bouton lumineux 19mm, eao}
-\newline \textbf{Convertisseur AC-DC 48V TBLC50, Traco Power}
-\newline \textbf{Convertisseur 48V-5V DDR-15L-5, MEAN WELL}
-
-% Encodeur
-\textbf{Encodeur TMCS-20, Trinamic}
-\newline
-\textbf{Montage encodeur TMCS-20, Trinamic}
-
-% Roulements
-\textbf{Roulement 61700 X-2RS1, SKF}
-
-% Moteur linéaire
-\textbf{Moteur linéaire AUM2-S3, TDS}
-
-% Driver Moteur
-\textbf{Driver moteur EPOS4 Compact 50/15, Maxon}
-
-% Règle linéaire
-\textbf{Règle linéaire LIDA 405, Heidenhain}
-\newline
-\textbf{Tête de lecture LIDA 405, Heidenhain}
-
-% Pieds réglables
-\textbf{Pieds réglables GN6311.6, Elesa}
-
 \iffalse
 
+    \clearpage
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}{.6\textwidth}
+            \centerline{\Huge{Annexe A}}
+        \end{minipage}
+    \end{center}
+    \vfill % equivalent to \vspace{\fill}
+    \clearpage
+
     %Planning
-    \includepdf[pages=-,rotateoversize]{Annexes/2022-03-28 Planning.pdf}
+    \includepdf[pages=-,rotateoversize]{Annexes/Planning.pdf}
+
+    \clearpage
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}{.6\textwidth}
+            \centerline{\Huge{Annexe B}}
+        \end{minipage}
+    \end{center}
+    \vfill % equivalent to \vspace{\fill}
+    \clearpage
 
     %Mises en plans des pièces mécaniques
     \includepdf[pages={1-3},landscape=false]{Annexes/DossierFabrication}
@@ -51,35 +38,20 @@
     \includepdf[pages={15-16},landscape=true,fitpaper]{Annexes/DossierFabrication}
     \includepdf[pages={17},landscape=true]{Annexes/DossierFabrication}
 
-    %Anneau de LEDs
-    \includepdf[pages=-]{Annexes/anneau de Led.pdf}
-
-    % Boitier et composants d'alimentation
-    \includepdf[pages=-]{Annexes/Boitier alimentation}
-    \includepdf[pages=-]{Annexes/Arret d'urgence}
-    \includepdf[pages={1,3-7}]{Annexes/Bouton d'alimentation}
-    \includepdf[pages=-]{Annexes/Bouton lumineux}
-    \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
-    \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
-
-    % Encodeur
-    \includepdf[pages={1,4-7}]{Annexes/Encodeur TMCS-20}
-    \includepdf[pages={1-12}]{Annexes/Montage encodeur}
+    \clearpage
+    \vspace*{\fill}
+    \begin{center}
+        \begin{minipage}{.6\textwidth}
+            \centerline{\Huge{Annexe C}}
+        \end{minipage}
+    \end{center}
+    \vfill % equivalent to \vspace{\fill}
+    \clearpage
 
     % Roulements
-    \includepdf[pages={1-3}]{Annexes/Roulement SKF W 61700 X-2RS1}
+    \includepdf[pages={1-2}]{Annexes/Roulement SKF W 61700 X-2RS1}
 
     % Moteur linéaire
     \includepdf[pages=-]{Annexes/Moteur lineaire}
-
-    % Driver Moteur
-    \includepdf[pages={1,10,18,25-37,46-65}]{Annexes/EPOS4-Module-Compact}
-
-    % Règle linéaire
-    \includepdf[pages={1,4-7,11,13}]{Annexes/Montage regle lineaire}
-    \includepdf[pages={1,4-5,7-9,}]{Annexes/Tete de lecture}
-
-    % Pieds réglables
-    \includepdf[pages=-]{Annexes/Pieds reglable}
 
 \fi
