--- a/Imprevus.tex
+++ b/Imprevus.tex
@@ -94,7 +94,14 @@ capteur incrémental digital et un capteur incrémental analogique ne sont pas s
 Deux options sont possibles pour remédier à ce problème. La première consiste à remplacer un des capteurs par un capteur SSI absolu ce qui
 requiert de chercher un capteur adéquat, attendre qu'il soit livré et modifier la structure pour pouvoir l'accueillir. La seconde solution
 serait d'installer des capteurs à effet Hall à côté du glider du moteur. Etant donné du peu de temps restant pour la complétion du projet le
-choix de solution s'est porté sur la seconde proposition.\\
+choix de solution s'est porté sur la seconde proposition. L'image suivante illustre comment le support se placera sur le moteur.\\
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.7\textwidth]{assets/figures/SolCapt.svg}
+    \caption{Illustration du montage du support sur le glider du moteur}
+    \label{fig:SolCapt}
+\end{figure}
 
 Pendant le mois d'août, la démarche suivante devra être appliquée pour venir à bout du problème. Premièrement, il faut commander un circuit de
 mesure utilisant des capteurs à effet Hall. Ensuite, dessiner et imprimer en 3D un support pour le capteur qui peut se monter sur le côté du
