--- a/acronyms.tex
+++ b/acronyms.tex
@@ -4,3 +4,5 @@
 \newacronym{PC}{PC}{Polycarbonate}
 \newacronym{PLA}{PLA}{Acide polylactique}
 \newacronym{PMMA}{PMMA}{Polyméthacrylate de méthyle aussi appelé plexiglas}
+\newacronym{PDO}{PDO}{Process Data Object}
+\newacronym{NMT}{NMT}{Network Management}
