--- a/bibliography.bib
+++ b/bibliography.bib
@@ -302,6 +302,30 @@
   keywords = {Youtube, RaspberryPi}
 }
 
+@online{TutoMaxon,
+  author   = {maxon group},
+  title    = {EPOS Tutorials},
+  url      = {https://www.youtube.com/watch?v=Ts_zUImHStE&list=PLmklAQtFT_ZINeRxFG2BschY0BM_2DYqI},
+  addendum = {(accessed: 26.07.2023)},
+  keywords = {Youtube, maxon group, EPOS}
+}
+
+@online{logimecatronik,
+  author   = {logimecatronik},
+  title    = {Le pendule inversé, contrôlé par un PID (un segway quoi)},
+  url      = {https://logimecatronik.fr/?page_id=130},
+  addendum = {(accessed: 26.07.2023)},
+  keywords = {PID, logimecatronik, Pendule inversé}
+}
+
+@online{canopen,
+  author   = {Christian Sandberg},
+  title    = {CANopen for Python},
+  url      = {https://canopen.readthedocs.io/en/latest/},
+  addendum = {(accessed: 27.07.2023)},
+  keywords = {CANopen, Python}
+}
+
 % @article{einstein,
 %     author = "Albert Einstein",
 %     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
