--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,8 +1,18 @@
-Lors de ce projet, différentes parties du pendule inversé ont été réalisées. Tout d'abord, la mécanique du système incluant le guidage, la motorisation
-et la mise en place de capteurs ont été faites en suivant les demandes posées en début de projet. Ensuite, la partie électrique avec l'alimentation du
-système et sa commande a aussi été développée pendant ce temps. Une grande quantité de pièces ont été commandées chez différents fabricants pour
-pouvoir construire ce projet. Ceci a requis du temps pour trouver et négocier des offres avec un prix et des temps de livraisons raisonnables
-pour rester dans le cadre du travail de Bachelor. D'autres pièces ont été développées personnellement et ont été fabriquées par l'école.\\
+Les objectifs placés en début de projet ne sont pas tous atteints étant donné les problèmes survenus en fin de projet.
+Malgré cela, plusieurs parties du pendule inversé ont été réalisées. Tout d'abord, la mécanique du système incluant le guidage, la motorisation
+et la mise en place de capteurs a été faite en suivant les demandes posées en début de projet. Ensuite, la partie électrique avec l'alimentation du
+système et sa commande a aussi été développée pendant ce temps. En tout, 14 pièces différentes ont été créées personnellement et fabriquées par l'atelier mécanique
+de la \acrshort{HEIG} et 4 pièces ont été imprimées en 3D avec les imprimantes mises à disposition. Les parties de communication, tests de déplacement
+et régulation n'ont pas pu être effectuées avant la remise de ce document et représentent les sources principales d'améliorations possibles sur le
+projet.\\
 
-Les étapes restantes à effectuer pendant la seconde partie du \acrshort{TB} sont: l'assemblage de tous les éléments commandés pour avoir un
-système fonctionnel, la programmation de la commande \gls{PID} et les tests sur le fonctionnement du système.
+D'un point de vue personnel, ce projet a apporté beaucoup de connaissances sur la méthode de travail professionelle. Les éléments les plus marquant
+étant l'importance d'un planning bien pensé, la demande d'avis d'experts dans des domaines plus précis et les négotiations pour les délais de livraison
+et tarifs de certains composants. Dans les compétences techniques, l'apprentissage du développement et de l'assemblage d'un boîtier électrique et
+les bonnes pratiques qui y sont associés ainsi que la programmation, bien que brève, sur une carte RaspberryPi me semblent être les points les plus
+intéressants.\\
+
+Le planning mis en place en début de projet sous-estimait la durée de certaines parties du travail à fournir ainsi que des temps de livraisons des
+pièces commandées et fabriquées. Certaines parties ont dû être abandonnées pendant le projet pour pouvoir terminer l'assemblage du pendules. La
+distribution des heures effectives varie beaucoup par rapport aux heures prévues. Cependant, le nombre d'heures dépensées pour ce travail jusqu'à
+maintenant arrive à un total de 423 heures ce qui dépasse les 420 heures prévues.
