--- a/glossary.tex
+++ b/glossary.tex
@@ -29,3 +29,8 @@
   name=CAN,
   description={Signifie "Controller Area Network", c'est un bus de donnée permettant la communication entre deux appareils}
 }
+
+\newglossaryentry{wizard}{
+  name=wizard,
+  description={C'est un assistant logiciel qui permet de faire automatiquement des tâches}
+}
