--- a/report.tex
+++ b/report.tex
@@ -28,9 +28,16 @@
 \frontmatter
 \clearemptydoublepage
 
+\raggedbottom
 %% Requis par les dispositions générales des travaux de Bachelor
 \preamble
 \authentification
+\clearemptydoublepage
+
+\centerline{\Large{Descriptif du Travail de Bachelor}}
+\includegraphics[width = \textwidth]{assets/figures/DescriptifAvant.svg}
+
+\includegraphics[width = \textwidth]{assets/figures/DescriptifArriere.svg}
 
 %% Résumé / Résumé publiable / Version abrégée
 \begin{abstract}
