--- a/Programmation.tex
+++ b/Programmation.tex
@@ -22,7 +22,7 @@ est simpliste mais la communication UART n'est pas utilisée lors de ce projet e
 l'alimentation de la carte RaspberryPi étant donné que la LED ne s'éteind que lorsque la carte est complètement à l'arrêt. La cathode, elle,
 est connectée sur un pin GND.
 
-\section{Initialisation EPOS4}
+\section{Initialisation EPOS4}\label{sec:InitEPOS4}
 Le contrôleur EPOS4 peut se brancher sur un ordinateur personnel avec un connecteur micro USB afin d'effectuer des tests. Pour cela, un logiciel
 appelé EPOS Studio qui est téléchargeable sur le site Maxon\cite{Maxon} est utilisé. Il permet de modifier les registres dans les contrôleurs EPOS
 afin de les régler pour le type de moteur qui sera contrôlé comme illustré ci-dessous.
@@ -34,10 +34,11 @@ afin de les régler pour le type de moteur qui sera contrôlé comme illustré c
     \label{fig:Registres}
 \end{figure}
 
-\subsection{Démarrage}
-Pour aider avec la gestion des registres des \textit{wizards} sont mis à disposition. Le premier s'appelle \textit{Startup wizard}, il permet
-de configurer les paramètres de notre moteur et des capteurs du système. Une image du \textit{wizard} est donnée ci-après. La configuration
-complète est présente dans l'annexe "ConfigurationWizards.docx" dans le dossier du projet.
+\subsection{Démarrage}\label{subsec:Demarrage}
+Pour aider avec la gestion des registres des \textit{\gls{wizard}} sont mis à disposition. Plusieurs tutoriels vidéo fait par Maxon \cite{TutoMaxon}
+sont disponible. Le premier s'appelle \textit{Startup wizard}, il permet de configurer les paramètres de notre moteur et des capteurs du système.
+Une image du \textit{\gls{wizard}} est donnée ci-après. La configuration complète est présente dans l'annexe "ConfigurationWizards.docx" dans le
+dossier du projet.
 
 \begin{figure}[H]
     \centering
@@ -47,11 +48,11 @@ complète est présente dans l'annexe "ConfigurationWizards.docx" dans le dossie
 \end{figure}
 
 Cependant, un problème est présent lors de la configuration des capteurs. La description du problème et la démarche qui devra être suivie pendant
-le mois d'août pour le résoudre sont spécifiés au chapitre \ref{sec:ProbCapt}. Ce problème empêche de pouvoir contrôler le moteur et donc de
-pouvoir communiquer en CANopen avec.\\
+le mois d'août pour le résoudre sont spécifiés au chapitre \ref{sec:ProbCapt}. Ceci renvoie une erreur sur le contrôleur et empêche de pouvoir
+contrôler le moteur et donc de pouvoir communiquer en CANopen avec.\\
 
-\subsection{Régulation}
-Le second \textit{wizard} s'appelle \textit{"Regulation Tuning"} et permet d'ajuster les paramètres de régulation du système. L'illustration
+\subsection{Régulation}\label{subsec:InitRegul}
+Le second \textit{\gls{wizard}} s'appelle \textit{"Regulation Tuning"} et permet d'ajuster les paramètres de régulation du système. L'illustration
 suivante montre à quoi ressemble la fenêtre.
 
 \begin{figure}[H]
@@ -65,10 +66,72 @@ Etant donné que les capteurs ne peuvent pas être utilisés dans cette configur
 est la régulation de courant. Il suffit de cliquer sur \textit{"Auto-tune"} pour que le système trouve les valeurs du régulateur de courant.\\
 
 \subsection{CANopen}
+Le \textit{\gls{wizard}} suivant porte sur la communication CANopen. Deux manières principale existent pour communiquer en CANopen, la SDO et la PDO.
+Dans le cas de ce projet ce sera la PDO qui sera utilisée car elle permet de définir en avance quels registres seront utilisés. Le \textit{\gls{wizard}}
+permet de créer un \textit{mapping} pour les registres que l'on veut lire ou écrire en PDO. L'image qui suit illustre une des pages de paramètrage de la
+communication CANopen en PDO.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/ParamCANopen.png}
+    \caption{Fenêtre de réglage pour la communication CANopen de l'EPOS4}
+    \label{fig:ParamCAN}
+\end{figure}
+
+Ce \textit{mapping} peut ensuite être exporté pour être utilisé par la carte RaspberryPi pour établir la communication CANopen. Le chapitre suivant
+explique comment faire l'extraction.
 
 \subsection{Export de paramètres}
+Le dernier \textit{\gls{wizard}} permet d'exporter le dictionnaire d'objet qu'il faut fournir à la carte RaspberryPi pour pouvoir communiquer par
+CANopen avec le contrôleur moteur. La fenêtre suivante apparaît lorsque l'assistant est ouvert.
 
-\section{Communication CAN}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/ParamExport.png}
+    \caption{Fenêtre de réglage pour la communication CANopen de l'EPOS4}
+    \label{fig:ParamExport}
+\end{figure}
+
+Une fois le fichier exporté, il faut le placer sur la RaspberryPi à l'aide de github.
+
+\section{Communication CANopen}
+Comme précisé au chapitre \ref{subsec:Demarrage}, la communication ne peut pas être établie car le contrôleur renvoie une erreur par manque d'un
+capteur. La rédaction de cette section comporte uniquement des notions théoriques qui n'ont pas encore été appliquées et qui serviront de base
+pour l'établissement de la communication pendant le mois d'août. Les notions discutées dans cette section proviennent du site canopen \cite{canopen}.\\
+
+La première étape est l'installation de la librairie "canopen" sur la carte RaspberryPi. Les étapes suivantes sont la création d'un fichier .py et
+l'import de la librairie dans le fichier. Un bus de donnée CAN possède un \textit{network} qui doit être créé et connecté à un port de communication
+can. Chaque \textit{network} peut contenir un ou plusieurs \textit{nodes} qui représente les appareils avec lesquels la carte communique. Dans le cas
+du pendule un seul \textit{node} à besoin d'être ajouter sur le \textit{network}, celui du contrôleur EPOS4.\\
+
+Le type de communication utilisée sera en principe du \acrshort{PDO} ce qui implique de devoir créer un \textit{mapping} des registres du
+dictionnaire d'objets que la carte voudra lire ou écrire. La demande d'envoi de donnée peut se faire avec l'envoi d'une trame de donnée vide
+et un flag actif indiquant que l'on veut lire des données sur l'appareil.\\
+
+Finalement, le protocole \acrshort{NMT} permet de changer l'état des appareils qui sont commandés afin de pouvoir les allumer ou les éteindre
+quand c'est nécessaire. Il est aussi possible de surveiller les états des appareils régulièrement pour détecter quand des erreurs surviennent.
 
 \section{Régulation}
+Comme mentionné dans le chapitre \ref{subsec:InitRegul}, le contrôleur EPOS4 possède des boucles de régulations internes. Cependant, ces régulateurs
+ne sont pas faits pour réguler un système comme un pendule inverse. En effet, les boucles de régulations de l'EPOS4 fonctionnent en admettant que
+les capteurs se trouvent sur l'axe moteur ou sur un axe entraîné par le moteur. Le maintient en équilibre d'une tige parfaitement libre autour de son
+axe n'est donc pas possible avec ces boucles là.\\
+
+La méthode pour réussir à réguler le système est de récupérer les valeurs de position, vitesse et accélération des deux capteurs sur la RaspberryPi
+par communication CANopen. À partir de ces valeurs il faut effectuer le calcul de régulation soit même pour en ressortir une position ou une vitesse
+qui est ensuite envoyé à l'EPOS4 de nouveau par communication CANopen.\\
+
+La première méthode de régulation serait de mettre en place 2 boucles de régulations PID, une pour maintenir la tige vers le haut et une autre pour
+maintenir la partie mobile au centre du système. Les deux résultats des boucles serait sommés avec celui du centrage ayant un facteur plus faible
+sur le résultat. Pour pouvoir faire une régulation PID il faut une valeur dérivée et une intégrale ce qui veut dire qu'en connaissant la position,
+la vitesse et l'accélération, la régulation se ferait en vitesse.\\
+
+Une autre méthode de régulation trouvée sur un site appelé logimecatronik \cite{logimecatronik} utilise une seule boucle de régulation avec une
+approximation des petits angles sur la position angulaire. Le boucle obtenue est un régulateur PD avec deux termes proportionnels: un pour l'angle
+de la tige et un autre pour la position linéaire et un terme dérivatif pour la vitesse de déplacement linéaire. Cette manière de faire est moins
+robuste mais donne une régulation en position.\\
+
+Si jamais les objectifs de communiquer avec le contrôleur EPOS et de réussir à bouger le moteur sans problème sont atteint pendant le mois d'août,
+le nouvel objectif sera de faire fonctionner le pendule inverse en mettant en place l'une de ces méthodes de régulation.
+
 
